--- a/modules/client-app-root-page/module.json5
+++ b/modules/client-app-root-page/module.json5
@@ -7,7 +7,7 @@
   "moduleDependencies":[
     "client-app-frame"
   ],
-  "position": -1,
+  "position": -10,
   "manipulate":{
     "text":{
       "src/pages/<%=vars.newElementInfo.name%>.js":[
@@ -28,7 +28,7 @@
           "position":"before",
           "newlineBefore":false,
           "anchorPoint":"/* Extra app modules -- end */",
-          "value":"<%=vars.uncommentedStaticImport ? '' : '// '%>import './pages/<%=vars.newElementInfo.name%>.js'"
+          "value":"<%=vars.newElementInfo.uncommentedStaticImport ? '' : '// '%>import './pages/<%=vars.newElementInfo.name%>.js'"
         },
         {
           "op":"insert",
