IT FINALLY WORKS

--- a/modules/client-app-routed-element/module.json5
+++ b/modules/client-app-routed-element/module.json5
@@ -17,7 +17,6 @@
       ],
       "<%=vars.newElementInfo.destination.file%>":[
         {
-
           "op": "insert",
           "position": "before",
           "newlineAfter": true,
@@ -26,7 +25,6 @@
           "value":"<<%=vars.newElementInfo.name%> routing-group=\"<%=vars.newElementInfo.destination.pagePath%>\" slot=\"content\"></<%=vars.newElementInfo.name%>>"
         },
         {
-
           "op": "insert",
           "position": "before",
           "newlineAfter": false,
@@ -34,13 +32,16 @@
           "value": "import '<%=vars.newElementInfo.importPath%>'"
         },
         {
-
           "op": "insert",
           "position": "before",
           "newlineAfter": true,
           "newlineBefore": false,
           "anchorPoint": '<!-- Routed element tab heading insertion point -->',
           "value":"<a name=\"<%=vars.newElementInfo.nameNoPrefix%>\" href=\"<%=vars.newElementInfo.destination.pagePath%><%=vars.newElementInfo.subPath%>\"><div><%=utils.capitalize(vars.newElementInfo.nameNoPrefix)%></div></a>"
+        },
+        {
+           "op":"custom",
+           "function":"maybeAddStarToPath"
         }
       ]
     }
