--- a/modules/client-base/module.json5
+++ b/modules/client-base/module.json5
@@ -18,7 +18,7 @@
           "op":"resolve-ejs"
         }
       ],
-      "src/<%=dstPackageJsonValues.name%>.js":[
+      "src/<%=vars.appElementName%>.js":[
         {
           "op":"resolve-ejs"
         }
