Adding pages programmatically, avoiding repetitions

--- a/modules/client-app-root-page/module.json5
+++ b/modules/client-app-root-page/module.json5
@@ -32,6 +32,7 @@
           "value":"<%=vars.newElementInfo.uncommentedStaticImport ? '' : '// '%>import './pages/<%=vars.newElementInfo.name%>.js'"
         },
         {
+          "if":"<%=!vars.newElementInfo.notInDrawer%>",
           "op":"insert",
           "position":"before",
           "newlineBefore":false,
