--- a/modules/server-db-store/module.json5
+++ b/modules/server-db-store/module.json5
@@ -1,13 +1,13 @@
 {
-  "name":"server-store",
+  "name":"server-db-store",
   "version":"1.0.0",
   "component": true,
-  "description":"Add a store to the app",
+  "description":"Add a DB store to the app",
   "author":"Tony Mobily",
   "moduleDependencies":[
     "server-stores"
   ],
-  "position": 500,
+  "position": 510,
   "manipulate":{
     "text":{
       "server/stores/<%=vars.newStoreInfo.version%>/<%=vars.newStoreInfo.name%>.js":[
