--- a/modules/server-store/module.json5
+++ b/modules/server-store/module.json5
@@ -12,7 +12,8 @@
     "json":{
       "server/package.json":[
         {
-            "op":"set",
+            "if": "<%=vars.newElementInfo.typeOfStore === 'db'%>", 
+            "op":"setIfNotThere",
             "key":"dependencies.jsonreststores-mysql",
             "value":"^2.x.x"
         }
