--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "forScaffoldizer": true,
   "dependencies": {
     "escape-string-regexp": "^4.0.0",
+    "readdir-glob": "^1.1.1",
     "scaffoldizer": "0.0.11"
   },
   "bin": {
