--- a/package.json
+++ b/package.json
@@ -16,5 +16,16 @@
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/mobily-enterprises/js-kit/issues"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-lit": "^1.8.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "standard": "*"
   }
 }
